--- a/public/index.html
+++ b/public/index.html
@@ -28,9 +28,9 @@
     -->
         <title>React App</title>
     </head>
-    <body style="min-height: 100vh; display: flex; align-items: center;">
+    <body style="">
         <noscript>You need to enable JavaScript to run this app.</noscript>
-        <div id="root" class="mx-auto mt-3"></div>
+        <div id="root" class=""></div>
         <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
